--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zenith Media</title>
+    <title>Creative Haven</title>
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
     rel="stylesheet"
@@ -14,7 +14,7 @@
     <div id="main">
             <nav id="nav">
                 <div id="nav-title">
-                    <h1>Zenith Media</h1>
+                    <h1>Creative Haven</h1>
                     <h4>DESIGN & STRATEGY</h4>
                 </div>
                 <div id="nav-elem">
@@ -44,7 +44,7 @@
             <div id="right">
                 <p id="right-text-title" ><strong>BUILDING FUTURE-READY BRANDS</strong></p>
                 <h1 >Innovative Design & Marketing Solutions</h1>
-                <p id="right-text-para" >At Zenith Media, we blend creativity and technology to craft meaningful brand experiences. Our solutions empower businesses to evolve and thrive in the digital age.</p>
+                <p id="right-text-para" >At Creative Haven, we blend creativity and technology to craft meaningful brand experiences. Our solutions empower businesses to evolve and thrive in the digital age.</p>
                 <button>Schedule a Consultation</button>
             </div> 
           
@@ -76,7 +76,7 @@
                     </a>
                 </div>
                
-                <h2>Zenith Media</h2>
+                <h2>Creative Haven</h2>
                 <button>Contact Us</button>
             </div>
             <div id="footer-decor"><img src="https://static.showit.co/200/D1mJqUfERa-VyEFeWzbxMA/117156/rose.png" alt=""></div>
